---
id: 7b4daf72-85a6-4221-980d-a80dfea5e449
---
classDiagram
    class Book {
        <<abstract>>
        #String isbn
        #String title
        #String author
        #BigDecimal basePrice
        +Book(String isbn, String title, String author, BigDecimal basePrice)
        +getIsbn() String
        +getTitle() String
        +getAuthor() String
        +getBasePrice() BigDecimal
        +displayDetails() String
        +calculatePrice()* BigDecimal
        +getBookType()* String
    }
    
    class PhysicalBook {
        +PhysicalBook(String isbn, String title, String author, BigDecimal price)
        +calculatePrice() BigDecimal
        +displayDetails() String
        +getBookType() String
    }
    
    class EBook {
        -BigDecimal DISCOUNT_RATE$
        +EBook(String isbn, String title, String author, BigDecimal price)
        +calculatePrice() BigDecimal
        +displayDetails() String
        +getBookType() String
    }
    
    class AudioBook {
        -BigDecimal FEE_RATE$
        +AudioBook(String isbn, String title, String author, BigDecimal price)
        +calculatePrice() BigDecimal
        +displayDetails() String
        +getBookType() String
    }
    
    class Customer {
        -String customerId
        -String username
        -CustomerType customerType
        -int loyaltyPoints
        +Customer(String id, String name, CustomerType type)
        +getCustomerId() String
        +getUsername() String
        +getCustomerType() CustomerType
        +isVIP() boolean
        +getLoyaltyPoints() int
        +addLoyaltyPoints(int points) void
    }
    
    class CustomerType {
        <<enumeration>>
        GENERAL
        VIP
    }
    
    class OrderItem {
        -Book book
        -int quantity
        +OrderItem(Book book, int quantity)
        +getBook() Book
        +getQuantity() int
        +getItemPrice() BigDecimal
        +getLineTotal() BigDecimal
    }
    
    class ShoppingCart {
        -List~OrderItem~ items
        +ShoppingCart()
        +addItem(OrderItem item) void
        +getItems() List~OrderItem~
        +clearCart() void
        +calculateSubTotal() BigDecimal
        +displayCart() void
    }
    
    class Order {
        -String orderId
        -Customer customer
        -List~OrderItem~ orderItems
        -BigDecimal grandTotal
        +Order(Customer customer, List~OrderItem~ items)
        +getGrandTotal() BigDecimal
        +displayOrderSummary() void
    }
    
    class BookstoreApp {
        -List~Book~ inventory
        -List~Customer~ customers
        -Customer currentCustomer
        -ShoppingCart shoppingCart
        +main(String[] args) void
        +viewBooks() void
        +selectCustomer() void
        +addBookToCart() void
        +checkout() void
    }
    
    Book <|-- PhysicalBook : extends
    Book <|-- EBook : extends
    Book <|-- AudioBook : extends
    
    Customer *-- CustomerType : contains
    OrderItem *-- Book : contains
    ShoppingCart *-- OrderItem : contains
    Order *-- Customer : contains
    Order *-- OrderItem : contains
    
    BookstoreApp o-- Book : manages
    BookstoreApp o-- Customer : manages
    BookstoreApp o-- ShoppingCart : uses
    BookstoreApp --> Order : creates